--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -10,11 +10,14 @@ html {
 }
 
 body {
-  color: #FFFFFF;
+  color: #000000;
   font-size: 100%;
   font-family: 'Titillium Web', sans-serif;
 }
 
+ul {
+  list-style-type: square;
+}
 legend {
   font-style: italic;
 }
@@ -29,8 +32,8 @@ a:hover, a:active {
   color: #900021;
 }
 
-input[type=text] {
-  background-color: inherit;
+input[type=text], input[type=password] {
+  background-color: #000000;
   height: 17px;
   border: 0;
   margin: 5px;
@@ -41,8 +44,9 @@ input[type=text] {
   transition: box-shadow 0.3s;
 }
 
-input[type=text]:focus {
-  background-color: #EEEEEE;
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #000000;
+  color: #FFFFFF;
   outline: none;
   margin: 5px;
   padding: 3px;
@@ -50,13 +54,12 @@ input[type=text]:focus {
 }
 
 input[type=submit] {
-  background-color: #4EA6EA;
+  background-color: #333333;
   color: #FFFFFF;
   font-weight: bold;
   font-size: small;
   padding: 0 5px 0 5px;
   margin: 5px;
-  float: right;
   border-radius: 20px;
 }
 
@@ -71,9 +74,36 @@ input[type=submit]:hover {
   border-radius: 20px;
 }
 
+nav {
+  margin-top: 10px;
+}
+
 /* ----------------------------------------------------
-// custom identifiers
+// custom
 // --------------------------------------------------*/
+#logo {
+  float: left;
+  width: 300px;
+  height: 200px;
+  border: none;
+}
+
+#leftbar {
+  float: left;
+  width: 320px;
+  min-height: 100%;
+  border-right: 3px solid #000000;
+}
+
+#loginform {
+  float: right;
+  border: 1px solid #000000;
+}
+
+#content {
+  left: 510px;
+  margin: auto;
+}
 
 
 /* ----------------------------------------------------
