--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -79,8 +79,13 @@ input[type=submit]:hover {
 }
 
 nav {
-  clear: left;
   margin-top: 10px;
+  font-size: 80%;
+  float: right;
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+
 }
 
 /* ----------------------------------------------------
@@ -92,6 +97,8 @@ nav {
   height: 200px;
   border: none;
   margin: 5px;
+  position: absolute;
+  bottom: 10px;
 }
 
 #leftbar {
@@ -102,15 +109,20 @@ nav {
 /*  border-right: 3px solid #000000;*/
 }
 
-#loginform {
+#statspanel {
   float: right;
   border: 1px solid #000000;
   margin: 5px;
 }
 
 #content {
+/*
   left: 510px;
+  top: 50%;
+*/
   margin: auto;
+  position: relative;
+  transform: translateY(50%);
 }
 
 /* ----------------------------------------------------
@@ -119,6 +131,7 @@ nav {
 .topic {
   margin-left: 5px;
   font-size: 175%;
+  float: left;
 }
 
 .container {
