--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -18,6 +18,7 @@ body {
 ul {
   list-style-type: square;
 }
+
 legend {
   font-style: italic;
 }
@@ -88,6 +89,36 @@ nav {
 
 }
 
+h1 {
+  font-weight: bold;
+  font-size: 200%;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 180%;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 160%;
+}
+
+h4 {
+  font-weight: bold;
+  font-size: 140%;
+}
+
+h5 {
+  font-weight: bold;
+  font-size: 125%;
+}
+
+h6 {
+  font-weight: bold;
+  font-size: 115%;
+}
+
 /* ----------------------------------------------------
 // custom
 // --------------------------------------------------*/
@@ -119,10 +150,12 @@ nav {
 /*
   left: 510px;
   top: 50%;
-*/
-  margin: auto;
   position: relative;
   transform: translateY(50%);
+*/
+  margin: auto;
+  width: 90%;
+  clear: both;
 }
 
 /* ----------------------------------------------------
@@ -141,6 +174,11 @@ nav {
   border: 3px solid #000000;
   border-radius: 20px;
   text-align: center;
+  position: relative;
+  transform: translateY(50%);
+}
+
+.board {
 }
 
 .board ul {
